Tue Aug  9 22:57:45 2011  CHIKANAGA Tomoyuki  <nagachika00@gmail.com>

	* ext/date/date_parse.c (date_zone_to_diff): add RB_GC_GUARD.
	  [ruby-dev:44337] [Bug #5152]

	* ext/date/data_parse.c (parse_ddd_cb): ditto.

Tue Aug  9 14:25:47 2011  Naohisa Goto  <ngotogenome@gmail.com>

	* ext/fiddle/conversions.c (generic_to_value): ffi_arg and ffi_sarg
	  should be used to handle shorter return value. fix [Bug #3861]
	  [ruby-core:32504]

	* ext/fiddle/closure.c (callback): ditto

	* ext/fiddle/conversions.h (fiddle_generic): ditto

	* ext/fiddle/conversions.c (value_to_generic): char, short and int
	  are strictly distinguished on big-endian CPU, e.g. sparc64.

Tue Aug  9 11:21:08 2011  Narihiro Nakamura  <authornari@gmail.com>

	* gc.c (gc_lazy_sweep): if sweep target slots are not found, we
	  try heap_increment() because it might be able to expand the
	  heap. [Bug #5127] [ruby-dev:44285]

	* gc.c (gc_clear_mark_on_sweep_slots): if a sweeping was
	  interrupted, we expand the heap if at all possible.

Tue Aug  9 12:20:33 2011  Naohisa Goto  <ngotogenome@gmail.com>

	* test/fiddle/helper.rb (libc_so, libm_so): Solaris support added.
	  [ruby-core:38853] [Bug #5168]

	* test/dl/test_base.rb (libc_so, libm_so): on Solaris, remove libc
	  and libm version numbers for detecting default libc and libm.

Tue Aug  9 09:18:04 2011  Eric Hodel  <drbrain@segment7.net>

	* ext/zlib/zlib.c (gzfile_wrap):  Document encoding options.
	* ext/zlib/zlib.c (rb_gzwriter_s_open): ditto
	* ext/zlib/zlib.c (rb_gzreader_s_open): ditto

Sun Aug  7 23:31:32 2011  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>

	* time.c (rb_strftime_alloc): raise ERANGE if width is too large.
	  Patch by Nobuyoshi Nakada. [Bug #4457] [ruby-dev:43285]

	* test/ruby/test_time.rb (class TestTime): add a test for the
	  above change.

Sun Aug  7 22:51:45 2011  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>

	* ext/openssl/ossl_asn1.c (decode_eoc): remove unused variables.